K8S/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
 name: sample-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app-deployment
  namespace: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      component: sample-app-engine
  template:
    metadata:
      labels:
        component: sample-app-engine
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            component: sample-app-engine
      containers:
      - name: sample-app
        # image name will update and tagged as per the build number
        image: $REPOSITORY_URI:$IMAGE_TAG
        imagePullPolicy: "Always"
        ports:
          - containerPort: 5000
