K8S/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-api-service
  namespace : rest-api
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 80
    targetPort: 5000
  selector:
    component: rest-api-engine
  type: ClusterIP
